--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +175,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For part 2 of the lab, we will cluster genes based on their gene specific probe intensities over 100 days. The goal of this exercise is to find relationships among genes using k-means clustering. A description of k-means clustering can be found here: \n",
-    "We will be using the sklearn implementation: http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html"
+    "For part 2 of the lab, we will cluster genes based on their gene specific probe intensities over 100 days. The goal of this exercise is to find relationships among genes using k-means clustering, a common machine-learning technique for unsupervised learning.\n",
+    "\n",
+    "For the curious: A description of k-means clustering can be found here: http://stanford.edu/~cpiech/cs221/handouts/kmeans.html A more python-focused implementation of k-means can be found here: https://mubaris.com/2017/10/01/kmeans-clustering-in-python/\n",
+    "\n",
+    "In short, k-means clustering is a method to group a dataset. Using an iterative algorithm, k-means can identify relationships between seemingly disparate data points and deeper patterns than predicted by theory. Rather than implementing our own k-means algorithm(which can take quite some time), we will use someone else's! As it is much more likely to be developed, optimized, and tested, we can build off of other's work while saving time ourselves.\n",
+    "\n",
+    "In particular, we will be using the sklearn implementation: http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html/ Sklearn is an excellent data science and modelling package in Python and can run just about any model one could desire(besides neural networks), all of which follow a simple, easy-to-understand API.\n"
    ]
   },
   {
@@ -313,7 +318,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n"
+    "# Answer here:\n",
+    "\n",
+    "# get figure and axes for plot\n",
+    "fig, ax = plt.subplots()\n",
+    "for i in range(10):\n",
+    "    '''Answer: Fill in the rest of this code'''\n",
+    "    cluster = \n",
+    "    cluster_matrix = cluster.to_df().as_matrix().T\n",
+    "    ax.plt(cluster_matrix)\n",
+    "    \n",
+    "\n",
+    "# set labels to incubation days\n",
+    "labels = ['', 'Nve', 'd5', 'd6', 'd8', 'd15', 'd45', 'd106']\n",
+    "# rewrite labels\n",
+    "ax.set_xticklabels(labels)"
    ]
   },
   {
