--- a/notebooks/Lab4.ipynb
+++ b/notebooks/Lab4.ipynb
@@ -83,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -99,7 +100,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -113,9 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For part 1 of the lab, we will compare differentially accessible regions between different T cell activation states in normal T cells. To do this, we need a method that can calculate whether the value of a gene in two cell states is statistically significant. To determine whether sites are significantly different, we need a **peak calling** algorithm. These algorithms are able to determine which genes are significantly differentially accessible between two states (i.e. naive and effector). We will use our own peak calling algorithm to calculate differential peaks.\n",
+    "For part 1 of the lab, we will compare differentially accessible regions between different T cell activation states in normal T cells. To do this, we need a method that can calculate whether the diffence in accessibility at a given genomic region in two cell states is statistically significant. To determine whether sites are significantly different, we need a **differential peak calling** algorithm. These algorithms are able to determine which genes are significantly differentially accessible between two states (i.e. naive and effector). We will use our own peak calling algorithm to calculate differential peaks.\n",
     "\n",
-    "First, let us define a peak calling function called **callPeaks()**:"
+    "First, let us define a peak calling function called **callDifferentialPeaks()**:"
    ]
   },
   {
@@ -124,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def callPeaks(table, CAT1_NAMES, CAT2_NAMES):\n",
+    "def callDifferentialPeaks(table, CAT1_NAMES, CAT2_NAMES):\n",
     "    '''\n",
     "    Calls peaks on two categories of peak calling data. Can be used for ATAC-seq or RNA-seq.\n",
     "    Borrowed from http://dept.stat.lsa.umich.edu/~kshedden/Python-Workshop/gene_expression_comparison.html\n",
@@ -203,7 +209,7 @@
     "CAT1_NAMES = ['N1','N2','N3'] \n",
     "CAT2_NAMES = ['E5_1','E5_2','E5_3']\n",
     "\n",
-    "calledPeaksN = callPeaks(table, CAT1_NAMES, CAT2_NAMES)\n",
+    "calledPeaksN = callDifferentialPeaks(table, CAT1_NAMES, CAT2_NAMES)\n",
     "\n",
     "calledPeaksN"
    ]
@@ -212,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The score column contains how different the peak was between the two categories. Positive values demonstrate peaks more accessible in the first category (i.e. more accessible in naive). Negative values demonstrate peaks more accessible in the second category (i.e. more accessible in effector)"
+    "The score column contains how different the peak was between the two categories. Positive values indicate that the peak is more accessible in the first category (i.e. more accessible in naive). Negative values indicate that the peak is more accessible in the second category (i.e. more accessible in effector)"
    ]
   },
   {
@@ -231,8 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n",
-    "\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -241,7 +247,24 @@
    "source": [
     "<h2 style=\"color:red\">** Question 4**</h2> \n",
     "\n",
-    "Repeat this process to find the number of differentially accessible peaks for the transition from E5 to E7.\n",
+    "Find all of the differential peaks between the E5 to E7 (Effector 5 day and 7 day) cell states."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 5**</h2> \n",
     "\n",
     "How many peaks in the table above are more accessible in 7 day effector cells, compared to 5 day effector cells?\n",
     "How many peaks in the table above are less accessible in 7 day effector cells, compared to 5 day effector cells? (Save these values as variables, we will be plotting them later)"
@@ -253,15 +276,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer\n",
-    "\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 5**</h2> \n",
+    "<h2 style=\"color:red\">** Question 6**</h2> \n",
     "\n",
     "Repeat this process to find the number of differentially accessible peaks for the transition from E7 to M.\n",
     "\n",
@@ -275,25 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:red\">** Question 6**</h2> \n",
-    "\n",
-    "Make a bar plot that shows shows these changes in accessibility for the transitions N->E5, E5->E7, and E7->M. Plot closed peaks as negative values for easier viewing. There should be 6 total bars on the plot. Make sure to label the axes. (Hint: To make this plot, you can make a new table with the values computed above, or use matplotlib.) If you are unsure of what this plot may sort of look at, reference Figure 1B in the paper for help."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Answer\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n"
    ]
   },
   {
@@ -302,6 +308,25 @@
    "source": [
     "<h2 style=\"color:red\">** Question 7**</h2> \n",
     "\n",
+    "Make a bar plot that shows shows these changes in accessibility for the transitions N->E5, E5->E7, and E7->M. Plot closed peaks as negative values for easier viewing. There should be 6 total bars on the plot. Make sure to label the axes. (Hint: To make this plot, you can make a new table with the values computed above. You can then use the **.bar()** function to plot a bar graph.) If you are unsure of what this plot may sort of look at, reference Figure 1B in the paper for help."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 8**</h2> \n",
+    "\n",
     "Given the bar chart above, which transition has the fewest differences in accessibily? Which transition has the most changes in accessibily?"
    ]
   },
@@ -309,9 +334,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n",
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
     "\n",
-    "    "
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -325,16 +353,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 8**</h2> \n"
+    "<h2 style=\"color:red\">** Question 9**</h2> \n",
+    "\n",
+    "The first gene, Cd44, was stated in the paper to have low expression in naive cells. Filter the table of differentially expressed genes in the peak table called **calledPeaksN** that overlap Cd44. Do the scores reflect more or less accessibility in naive cells compared to 5 day effector cells?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -355,9 +386,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 9**</h2> \n",
+    "<h2 style=\"color:red\">** Question 10**</h2> \n",
     "\n",
-    "Run the peak calling algorithm, differentiating peaks between normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Print the resulting table."
+    "Run the differential peak calling algorithm, differentiating peaks between normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Print the resulting table."
    ]
   },
   {
@@ -366,23 +397,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 10**</h2> \n"
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
+    "\n",
+    "PD1 protein (encoded by Pdcd1 gene) is correlated with cell death. Look at the peaks around PD1 from the table above. Are the values associated with more or less accessibility in the normal states, compared to the dysfunctional states? Does this make sense, given the gene's function?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -396,11 +431,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will view a couple accessibility sites for activated T cells in the UCSC genome browser. \n",
+    "Now, we will view accessibility sites for activated T cells in the UCSC genome browser. \n",
     "\n",
     "1. Navigate to http://rstats.immgen.org/Chromatin/chromatin.html. \n",
     "2. Select ab T cells. Under the ab T cell category, select all of the NK (natural killer) cell categories. There are 4.\n",
-    "![UCSC Home Page](../images/lab4/select_NKcells.png)\n",
+    "![UCSC Home Page](https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/images/lab4/select_NKcells.png)\n",
+    "    \n",
     "3. Search for the gene 'Gzma' and click 'View data on UCSC Genome Browser'\n",
     "    "
    ]
@@ -409,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 11**</h2> \n",
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
     "Viewing Gzma in the genome browser, does the naive cell (NKT_Sp) look more or less accessible than the other three activated cell states?"
    ]
   },
@@ -417,14 +453,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 12**</h2> \n",
+    "<h2 style=\"color:red\">** Question 13**</h2> \n",
     "Navigate to gene cards (http://www.genecards.org/) and search for the gene **Gzma** and read the description. What process is this gene involved in? Does the function of this gene align with the accessibility trends you observed in the previous question? Explain."
    ]
   },
@@ -432,7 +473,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer here:**\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -440,14 +486,19 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:red\">** Bonus Question**</h2> \n",
-    "Describe, in words, how the peak calling algorithm works."
+    "Describe, in your own words, how the differential peak calling algorithm works."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer here**:\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
