--- a/notebooks/Lab4.ipynb
+++ b/notebooks/Lab4.ipynb
@@ -209,9 +209,9 @@
     "CAT1_NAMES = ['N1','N2','N3'] \n",
     "CAT2_NAMES = ['E5_1','E5_2','E5_3']\n",
     "\n",
-    "calledPeaksN = callDifferentialPeaks(table, CAT1_NAMES, CAT2_NAMES)\n",
+    "calledPeaksNaive = callDifferentialPeaks(table, CAT1_NAMES, CAT2_NAMES)\n",
     "\n",
-    "calledPeaksN"
+    "calledPeaksNaive"
    ]
   },
   {
@@ -225,10 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 3**</h2> \n",
-    "\n",
-    "How many peaks in the table above are more accessible in 5 day effector cells, compared to naive cells?\n",
-    "How many peaks in the table above are less accessible in 5 day effector cells, compared to naive cells? (Save these values as variables, we will be plotting them later)"
+    "From this table of called peaks, we can find the all of the peaks that are more accessibile in the 5 day effector cells, relative to the naive cells."
    ]
   },
   {
@@ -237,6 +234,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "E5_open = calledPeaksNaive.where(calledPeaksNaive['score'] < 0).num_rows\n",
+    "print(\"Number of peaks more accessibile in E5, compared to naive cells: \", E5_open)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 3**</h2> \n",
+    "How many peaks in the table above are less accessible in 5 day effector cells, compared to naive cells? (Save this value as a variable, as we will be plotting the value later.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E5_closed = ...\n",
+    "\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -276,6 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "E7_open = ...\n",
+    "E7_closed = ...\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -286,29 +305,7 @@
    "source": [
     "<h2 style=\"color:red\">** Question 6**</h2> \n",
     "\n",
-    "Repeat this process to find the number of differentially accessible peaks for the transition from E7 to M.\n",
-    "\n",
-    "How many peaks in the table above are more accessible in memory cells, compared to 7 day effector cells?\n",
-    "How many peaks in the table above are less accessible in memory cells, compared to 7 day effector cells? (Save these values as variables, we will be plotting them later)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:red\">** Question 7**</h2> \n",
-    "\n",
-    "Make a bar plot that shows shows these changes in accessibility for the transitions N->E5, E5->E7, and E7->M. Plot closed peaks as negative values for easier viewing. There should be 6 total bars on the plot. Make sure to label the axes. (Hint: To make this plot, you can make a new table with the values computed above. You can then use the **.bar()** function to plot a bar graph.) If you are unsure of what this plot may sort of look at, reference Figure 1B in the paper for help."
+    "Find all of the differential peaks between the E7 to M (Effector 7 day and memory) cell states."
    ]
   },
   {
@@ -325,7 +322,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2 style=\"color:red\">** Question 7**</h2> \n",
+    "\n",
+    "How many peaks in the table above are more accessible in memory cells, compared to 7 day effector cells?\n",
+    "\n",
+    "How many peaks in the table above are less accessible in memory cells, compared to 7 day effector cells? (Save these values as variables, we will be plotting them later)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_open = ...\n",
+    "\n",
+    "M_closed = ...\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2 style=\"color:red\">** Question 8**</h2> \n",
+    "\n",
+    "Make a bar plot that shows shows these changes in accessibility for the transitions N->E5, E5->E7, and E7->M. Plot closed peaks as negative values for easier viewing. There should be 6 total bars on the plot. Most of the code has been provided for the plot. To finish the plot, fill in the **values** variable with the differential values calculated above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "category = ['N->E5\\nopen', 'N-E5\\nclosed', 'E5->E7\\nopen', 'E5-E7\\nclosed', 'E7->M\\nopen', 'E7->M\\nclosed']\n",
+    "\n",
+    "values = ...\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n",
+    "\n",
+    "# make table with values\n",
+    "bar_table = Table().with_columns([\n",
+    "    'category', category, \n",
+    "    'values', values])\n",
+    "bar_table\n",
+    "    \n",
+    "# generate bar plot\n",
+    "bar_table.bar('category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 9**</h2> \n",
     "\n",
     "Given the bar chart above, which transition has the fewest differences in accessibily? Which transition has the most changes in accessibily?"
    ]
@@ -353,9 +408,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 9**</h2> \n",
+    "<h2 style=\"color:red\">** Question 10**</h2> \n",
     "\n",
-    "The first gene, Cd44, was stated in the paper to have low expression in naive cells. Filter the table of differentially expressed genes in the peak table called **calledPeaksN** that overlap Cd44. Do the scores reflect more or less accessibility in naive cells compared to 5 day effector cells?"
+    "The first gene, Cd44, was stated in the paper to have low expression in naive cells. Filter the table of differentially expressed genes in the peak table called **calledPeaksNaive** that overlap Cd44. (Hint: Use the **where** function from the Data Science API to filter the **symbol** column by **Cd44**.) Do the scores reflect more or less accessibility in naive cells compared to 5 day effector cells?"
    ]
   },
   {
@@ -386,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 10**</h2> \n",
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
     "\n",
     "Run the differential peak calling algorithm, differentiating peaks between normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Print the resulting table."
    ]
@@ -405,9 +460,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 11**</h2> \n",
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
     "\n",
-    "PD1 protein (encoded by Pdcd1 gene) is correlated with cell death. Look at the peaks around PD1 from the table above. Are the values associated with more or less accessibility in the normal states, compared to the dysfunctional states? Does this make sense, given the gene's function?"
+    "PD1 protein (encoded by Pdcd1 gene) is correlated with cell death. Look at the peaks around PD1 from the table above comparing  normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Are the values associated with more or less accessibility in the normal states, compared to the dysfunctional states? Does this make sense, given the gene's function?"
    ]
   },
   {
@@ -445,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 12**</h2> \n",
+    "<h2 style=\"color:red\">** Question 13**</h2> \n",
     "Viewing Gzma in the genome browser, does the naive cell (NKT_Sp) look more or less accessible than the other three activated cell states?"
    ]
   },
@@ -465,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 13**</h2> \n",
+    "<h2 style=\"color:red\">** Question 14**</h2> \n",
     "Navigate to gene cards (http://www.genecards.org/) and search for the gene **Gzma** and read the description. What process is this gene involved in? Does the function of this gene align with the accessibility trends you observed in the previous question? Explain."
    ]
   },
