remove part 2 from lab 4

--- a/notebooks/Lab4.ipynb
+++ b/notebooks/Lab4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chromatin Differentiation in Dysfunctional T cells"
+    "# Chromatin Differentiation in T cells"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All data in this lab comes from https://www.nature.com/articles/nature22367. This paper, titled 'Chromatin states define tumour-specific T cell dysfunction and reprogramming', collects ATAC-seq data from normal and dysfunctional T cells that were immunized with Listeria monoctgogenes strain. Here, we compare the accessibility between these two groups. Today, we will look at this datasets to draw similar conclusions regarding the change in epigenetic state of T cell dysfunction.\n",
+    "All data in this lab comes from https://www.nature.com/articles/nature22367. This paper, titled 'Chromatin states define tumour-specific T cell dysfunction and reprogramming', collects ATAC-seq data from normal and dysfunctional T cells that were immunized with Listeria monoctgogenes strain. Here, we compare the accessibility of T cells over time, comparing naive, effector and memory chromatin states.\n",
     "\n",
     "Data can be found at https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE89309.\n",
     "\n",
@@ -65,7 +65,7 @@
     "- L35: Dysfunctional T cells after 35 days\n",
     "- L60: Dysfunctional T cells after 60 days\n",
     "\n",
-    "You may notice there are multiple samples for each category (i.e. E5_1, E5_2, E5_3). These represent biological replicates.\n"
+    "You may notice there are multiple samples for each category (i.e. E5_1, E5_2, E5_3). These represent biological replicates. We will not be looking at dysfunctional T cell data today, but will be using this data in future labs.\n"
    ]
   },
   {
@@ -427,59 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Comparing Normal and Dysfunction T cell accessibility\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we will compare the normal effector states (E5/E7) to dysfunctional T cell states (L5/L7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:red\">** Question 11**</h2> \n",
-    "\n",
-    "Run the differential peak calling algorithm, differentiating peaks between normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Print the resulting table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:red\">** Question 12**</h2> \n",
-    "\n",
-    "PD1 protein (encoded by Pdcd1 gene) is correlated with cell death. Look at the peaks around PD1 from the table above comparing  normal effector states (E5/E7) and dysfunctional T cell states (L5/L7). Are the values associated with more or less accessibility in the normal states, compared to the dysfunctional states? Does this make sense, given the gene's function?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 3: Viewing ATAC-seq data in UCSC Genome Browser"
+    "## Part 2: Viewing ATAC-seq data in UCSC Genome Browser"
    ]
   },
   {
@@ -500,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 13**</h2> \n",
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
     "Viewing Gzma in the genome browser, does the naive cell (NKT_Sp) look more or less accessible than the other three activated cell states?"
    ]
   },
@@ -520,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 14**</h2> \n",
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
     "Navigate to gene cards (http://www.genecards.org/) and search for the gene **Gzma** and read the description. What process is this gene involved in? Does the function of this gene align with the accessibility trends you observed in the previous question? Explain."
    ]
   },
