--- a/notebooks/Lab5.ipynb
+++ b/notebooks/Lab5.ipynb
@@ -30,7 +30,10 @@
    "source": [
     "In this lab, we will be looking and RNA-seq data from three phases of cell division: G1, G2 and M phases.\n",
     "\n",
-    "The data in this lab is from Regulation of mRNA translation during mitosis by Tanenbaum et al. This paper can be found at https://elifesciences.org/articles/07957. Data for this lab was taken from GEO and can be found at https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE67902."
+    "The data in this lab is from \"Regulation of mRNA translation during mitosis by Tanenbaum et al\". This paper can be found at https://elifesciences.org/articles/07957. Data for this lab was taken from GEO and can be found at https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE67902.\n",
+    "\n",
+    "\n",
+    "First, let's load in expression data for multiple genes during different phases in the cell division process."
    ]
   },
   {
@@ -40,16 +43,16 @@
    "outputs": [],
    "source": [
     "# Read in csv file into a table\n",
-    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab5/GSE67902_Supplemental_table_S1_mRNA_analysis.csv')"
+    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab5/GSE67902_Supplemental_table_S1_mRNA_analysis.csv')\n",
+    "\n",
+    "table"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "table"
+    "This table contains gene expression quantifications for about 9800 genes in the G2, M and G1 phases of cell division."
    ]
   },
   {
@@ -66,7 +69,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -74,14 +82,19 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:red\">** Question 2**</h2> \n",
-    "Name and explain the 4 basic phases of mitosis."
+    "Name and explain the 4 basic phases of mitosis. Here is a reference describing the 4 phases: https://www.khanacademy.org/science/biology/cellular-molecular-biology/mitosis/a/phases-of-mitosis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer here:**"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -90,7 +103,7 @@
    "source": [
     "## Looking at the data\n",
     "\n",
-    "Notice that the table has 6 numerical columns. The first 3 numeric columns are RPKM values. The next three columns are total read counts."
+    "Notice that the table has 6 columns with numerical data. The first 3 numeric columns are RPKM values. The next three columns are total read counts."
    ]
   },
   {
@@ -99,14 +112,19 @@
    "source": [
     "<h2 style=\"color:red\">** Question 3**</h2> \n",
     "\n",
-    "What does RPKM stand for? How are these values different from the total read counts?"
+    "What does RPKM stand for? How might RPKM values differ from the total read counts that are also found in the data table? (Hint: If you are unsure of the relationship between RPKM and total read counts, you may want to look up the definition of RPKM)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -115,14 +133,19 @@
    "source": [
     "<h2 style=\"color:red\">** Question 4**</h2> \n",
     "\n",
-    "Why might we prefer using RPKM values, instead of total read counts, when comparing mitosis phases for RNA-seq data?"
+    "Why might we prefer using RPKM values, instead of total read counts, when comparing gene expression values from RNA-seq data?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -131,7 +154,7 @@
    "source": [
     "## Genes Upregulated in the G1 Checkpoint\n",
     "\n",
-    "Next, we will find all genes that are up-regulated in the G1 checkpoint. To do this, we will calculate the ratio of RPKM in G1 compared to the M phase, and filter by genes where the fraction G1/M > 2."
+    "Next, we will find all genes that are up-regulated in the G1 checkpoint. To do this, we will calculate the ratio of RPKM in G1 compared to the M phase, and filter by genes where the fraction G1/M > 2. In this filter, we are searching for genes that are overexpressed in G1 phase, relative to M phase."
    ]
   },
   {
@@ -162,7 +185,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -171,7 +199,7 @@
    "source": [
     "<h2 style=\"color:red\">** Question 6**</h2> \n",
     "\n",
-    "For how many genes is G1 expression greater than in the M phase? (count the rows in the filtered table we produced above)"
+    "For how many genes is G1 expression greater than in the M phase? (Hint: Count the rows in the filtered table we produced above)"
    ]
   },
   {
@@ -180,7 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -189,7 +218,7 @@
    "source": [
     "<h2 style=\"color:red\">** Question 7**</h2> \n",
     "\n",
-    "Run a similar comparison analysis to the one above for G2 phase: find all of the genes that are up-regulated in G2 phase, compared to M. Print the number of genes that are up-regulated."
+    "Run a similar comparison analysis to the one above for G2 phase: find all of the genes that are up-regulated in G2 phase, compared to M phase. Print the number of genes that are up-regulated in G2 phase, relative to M phase."
    ]
   },
   {
@@ -198,16 +227,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finding similarities in gene expression in the G1 and G2 Phase\n",
+    "## Finding similarities in gene expression in the G1 and G2 Phases\n",
     "\n",
-    "Next, we will find the intersection of genes that are up-regulated in both the G1 and G2 phase. To do this, we will use the intersect() function defined below. This function takes in 2 parameters: two lists."
+    "Next, we will find the intersection of genes that are up-regulated in both the G1 and G2 phases, relative to the M phase. To do this, we will use the intersect() function defined below. This function takes in 2 parameters a and b, which are both lists."
    ]
   },
   {
@@ -225,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As an example, say we have two lists, geneList1 and geneList2. We can use this function to calculate the intersection:"
+    "As an example, say we have two lists, geneList1 and geneList2. We can use this function to calculate the intersection of the two lists:"
    ]
   },
   {
@@ -253,7 +283,7 @@
    "source": [
     "<h2 style=\"color:red\">** Question 8**</h2> \n",
     "\n",
-    "Using the intersect() function, find the intersection of genes that are up-regulated in both G1 and G2."
+    "Using the intersect() function, find the intersection of genes that are up-regulated in both G1 and G2 phases, relative to the M phase."
    ]
   },
   {
@@ -262,7 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -271,14 +302,19 @@
    "source": [
     "<h2 style=\"color:red\">** Question 9**</h2> \n",
     "\n",
-    "Go to genecards (http://www.genecards.org/) and search for gene CDKN1A. This gene should be on your list printed in question 8. Give a short description of the gene as it relates to checkpointing.\n"
+    "Notice that the gene CDKN1A is in this intersecting list you just produced above. Go to genecards (http://www.genecards.org/) and search for gene CDKN1A. Give a short description of CDKN1A's role in cell division checkpointing, and any iteractions it may have with p53 gene.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here**:\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -286,14 +322,19 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:red\">** Question 10**</h2> \n",
-    "Now, on genecards (http://www.genecards.org/) search for p53 and navigate to the section called 'Function'. Read this section. According to this paragraph, is p53 important in G1, G2, or both stages?"
+    "Now, on genecards (http://www.genecards.org/) search for TP53 and navigate to the section called 'Function'. Read this section. According to this paragraph, is p53 important in G1, G2, or both stages?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer here: **\n"
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -301,7 +342,7 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:red\">** Question 11**</h2> \n",
-    "Now, flter the original data table for the p53 gene. Does the data in this row support or contradict the p53's role in G1 and G2? Explain."
+    "Now, filter the original data table for the TP53 gene, and observe the expression in the G1, G2 and M phases. Does this data for TP53 support or contradict TP53's role in G1 and G2 described in the problem above? Explain."
    ]
   },
   {
@@ -310,14 +351,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Explain answer here:**\n"
+    "** Explanation here:**\n",
+    "\n",
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -332,8 +381,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer here: **\n",
-    "    "
+    "---\n",
+    "## <span style=\"color:red\">Student Answer</span>\n",
+    "\n",
+    "*Double-click and add your answer between the lines*\n",
+    "\n",
+    "---"
    ]
   },
   {
