--- a/notebooks/Lab8.ipynb
+++ b/notebooks/Lab8.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "<h2 style=\"color:red\">** Question 3**</h2> \n",
     "\n",
-    "What is an MHC Class I molecule?"
+    "What other HLA molecules exist? "
    ]
   },
   {
