--- a/notebooks/Lab9.ipynb
+++ b/notebooks/Lab9.ipynb
@@ -46,7 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# load in data for part 1\n",
     "patients = Table.read_table(\"https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab9/TableS2.Clinical_and_genome_characteristics_each_patient.csv\")\n",
     "\n",
@@ -186,7 +185,7 @@
     "                      | ((patients_df['overall_survival'] < 365) \n",
     "                         & (patients_df['RECIST'] == 'SD'))]\n",
     "\n",
-    "benefit"
+    "benefit.head()"
    ]
   },
   {
@@ -271,7 +270,7 @@
     "# rename the columns to match the cohort name. This will be displayed on the boxplot.\n",
     "result.columns = ['minimal', 'long_term', 'benefit']\n",
     "\n",
-    "result"
+    "result.head()"
    ]
   },
   {
