--- a/notebooks/Lab9.ipynb
+++ b/notebooks/Lab9.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "source": [
     "<h2 style=\"color:red\">** Question 5**:</h2> \n",
-    "    Print out how many individuals are in each of these three cohorts. (Hint: You can get the number of rows in a DataFrame by using the .shape on the dataframe and fetching the first dimension (i.e. df.shape[0])). The benefit cohort has been completed as an example."
+    "    Print out how many individuals are in each of these three cohorts. (Hint: You can get the number of rows in a DataFrame by using the .shape on the dataframe and fetching the first dimension (i.e. df.shape[0]))."
    ]
   },
   {
